--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,16 @@
 ---
 
 @import "{{ site.theme }}";
+.item {
+  display: inline-block;
+}
+
+.audio {
+  vertical-align: middle;
+  position: absolute;
+  left: 35px;
+}
+
+.audioContainer {
+  position: relative;
+}
